Ajout du Hero + ajout des images

--- a/scss/main.css
+++ b/scss/main.css
@@ -11971,8 +11971,36 @@ html {
   position: relative;
 }
 
+p {
+  font-family: "Hind Madurai", sans-serif;
+}
+
 main {
   margin-bottom: 250px;
+}
+
+.hero-scene {
+  position: relative;
+}
+.hero-scene::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url(../assets/images/fondHeroScene.jpg) center/cover;
+  filter: brightness(0.3);
+}
+.hero-scene * {
+  position: relative;
+}
+.hero-scene .hero-scene-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer {
