--- a/scss/main.css
+++ b/scss/main.css
@@ -12012,4 +12012,24 @@ main {
 
 .text-justify {
   text-align: justify;
+}
+
+.image-card {
+  position: relative;
+}
+.image-card:hover .title-img {
+  opacity: 1;
+}
+.image-card:hover img {
+  filter: brightness(0.4);
+  transition: all 0.2s ease-in-out;
+}
+
+.title-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
 }/*# sourceMappingURL=main.css.map */
