--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 p {
-    font-family: $font-family-serif;
+  font-family: $font-family-serif;
 }
 
 main {
@@ -15,31 +15,31 @@ main {
 }
 
 .hero-scene {
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url(../assets/images/fondHeroScene.jpg) center/cover;
+    filter: brightness(0.3);
+  }
+
+  * {
+    // Positionner tous les éléments au-dessus de "before"
     position: relative;
+  }
 
-    &::before{
-        content: "";
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: url(../assets/images/fondHeroScene.jpg)center/cover;
-        filter: brightness(0.3);
-    }
-
-    * {
-        // Positionner tous les éléments au-dessus de "before"
-        position: relative;
-    }
-
-    .hero-scene-content {
-        height: 300px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .hero-scene-content {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .footer {
@@ -50,5 +50,29 @@ main {
 }
 
 .text-justify {
-    text-align: justify;
+  text-align: justify;
+}
+
+.image-card {
+  position: relative;
+
+  &:hover {
+    .title-img {
+      opacity: 1;
+    }
+
+    img {
+      filter: brightness(0.4);
+      transition: all 0.2s ease-in-out;
+    }
+  }
+}
+
+.title-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
 }
